# miniWeather-hybrid-parallel

./: .gitignore  CMakeLists.txt  README.md  data_m3_sync.csv  docker-compose.yml  ssh-conf.md  start_cluster.sh
docker/: Dockerfile
docs/: GPU_Profiling.md  project_analysis.md.backup
profiles/: nsys_report_400.nsys-rep  nsys_report_400.sqlite  nsys_report_400_10s.sqlite  nsys_report_800.nsys-rep  nsys_report_800.sqlite  nsys_report_800_10s.sqlite  timeline_400x200.nsys-rep  timeline_800x400.nsys-rep
scripts/: check_nc_data.py  generate_visualizations.sh  hybrid_experiment.py  plot_architecture.py  plot_cpu_gpu_comparison.py  plot_openmp_scaling.py  plot_results.py  plot_scaling_clean.py  scaling_study.py  test_pnetcdf.sh  test_scenarios.py  validate.py  visualize_all_scenarios.py  visualize_pro.py  weak_scaling_study.py
src/: miniWeather_mpi.cpp  miniWeather_mpi_openacc.cpp  miniWeather_mpi_openmp45.cpp  miniWeather_serial.cpp
